--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,31 +4,33 @@ repo: upptime # Your Github repository name
 
 # Add your sites here
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Broken Site
-    url: https://thissitedoesnotexist.com
-  - name: Secret Site
-    url: $SECRET_SITE
+  - name: FastGit Home
+    url: https://fastgit.org
+  - name: FastGit Archive
+    url: https://archive.fastgit.org
+  - name: FastGit Document
+    url: https://doc.fastgit.org
+  - name: FastGit Download
+    url: https://download.fastgit.org
+  - name: FastGit Hub
+    url: https://hub.fastgit.org
+  - name: FastGit Status
+    url: https://status.fastgit.org
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
-  cname: demo.upptime.js.org
+  # cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [Github repository](https://github.com/koj-co/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/koj-co/upptime)
+  name: FastGit Uptime
+  introTitle: "**FastGit**, fast way to get GitHub things."
+  introMessage: See, we reaches for our SLA requirement (0%+)!
   navbar:
-    - title: Status
-      href: /
+    - title: Home
+      href: https://fastgit.org
     - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+      href: https://github.com/FastGitORG
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
