--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,7 +29,7 @@ status-website:
   # cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
   baseUrl: /repo
-  #logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://cdn.jsdelivr.net/gh/FastGitORG/logo@ad87e38c7101537010b3dc6f7d4d52bd1f915002/v2.1.png
   name: FastGit Uptime
   introTitle: "**FastGit**, fast way to get GitHub things."
   introMessage: See, we always reach our SLA requirement (0%+)!
